--- a/firstpage.html
+++ b/firstpage.html
@@ -60,7 +60,7 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+	          <li class="nav-item"><a href="#education-section" class="nav-link"><span>Education</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>My Skills</span></a></li>
@@ -163,7 +163,7 @@
     	</div>
     </section> -->
 
-    <section class="ftco-section ftco-no-pb goto-here" id="resume-section"> 
+    <section class="ftco-section ftco-no-pb goto-here" id="education-section"> 
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -613,7 +613,7 @@
     <div class="row justify-content-center mb-5 pb-5">
       <div class="col-md-7 heading-section text-center ftco-animate">
         <h1 class="big big-2">My Skills</h1>
-        <h2 class="mb-4"></h2>
+        <h2 class="mb-4">My skills</h2>
         <p>Passionate Full Stack Developer with expertise in building modern, responsive web applications and seamless user experiences.</p>
       </div>
     </div>
