--- a/firstpage.html
+++ b/firstpage.html
@@ -131,7 +131,7 @@
 			</p>
 			<p>
 		<!-- Download Resume -->
-			<a href="resume" class="btn btn-primary py-3 px-3" target="_blank">Download CV</a>
+			<a href="resume/Manikandan Resume (5).pdf" class="btn btn-primary py-3 px-3" target="_blank">Download CV</a>
 			</p>
 			</div>
 			</div>
