--- a/firstpage.html
+++ b/firstpage.html
@@ -43,6 +43,12 @@
   position: relative;
   overflow: hidden;
 }
+.img-about .img {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+}
 
     </style>
   </head>
@@ -99,30 +105,36 @@
 
     <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
     	<div class="container">
-    		<div class="row d-flex no-gutters">
-    			<div class="col-md-6 col-lg-6 d-flex">
-    				<div class="img-about img d-flex align-items-stretch">
-    					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/my\ pic.jpg); background-size: 30vh; width: 100vh">
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-6 col-lg-6 pl-md-5 py-5">
-    				<div class="row justify-content-start pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">About</h1>
-		            <h2 class="mb-4" style="color: rgba(152, 84, 196, 0.621);">About Me</h2>
-		            <p style="color: rgb( 0, 71, 171);">I’m a passionate MERN Stack Developer with a strong foundation in "HTML,CSS,JAVASCRIPT,BOOTSTRAP,REACT.JS and NODE.JS". With hands-on experience in building responsive, user-friendly web applications, I love turning ideas into impactful digital solutions.</p>
-		            <ul class="about-info mt-4 px-md-0 px-2" style="color: rgb(0, 128, 128);">
-		            	<li class="d-flex"><span>Name:</span> <span>Manikandan</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>September 19, 2002</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Kvs Street Alangudi Pudukkottai</span></li>
-		            	<li class="d-flex"><span>Pin code:</span> <span>622301</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>madhanmani424@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>6383124653</span></li>
-		            </ul>
-		          </div>
-		        </div>
+    		<div class="col-md-6 col-lg-6 d-flex d-md-flex">
+        <div class="img-about img d-flex align-items-stretch w-100" style="position: relative; min-height: 800px;">
+          <div class="overlay"></div>
+          <div class="img d-flex align-self-stretch align-items-center w-100" 
+               style="background-image: url('images/my pic.jpg'); 
+                      background-size: cover; 
+                      background-position: center; 
+                      height: 80%;">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-6 pl-md-5 py-5 d-flex flex-column justify-content-center">
+        <div class="row justify-content-start pb-3">
+          <div class="col-md-12 heading-section ftco-animate">
+            <h1 class="big">About</h1>
+            <h2 class="mb-4" style="color: rgba(152, 84, 196, 0.621);">About Me</h2>
+            <p style="color: rgb(0, 71, 171);">
+              I’m a passionate MERN Stack Developer with a strong foundation in HTML, CSS, JavaScript, Bootstrap, React.js, and Node.js. With hands-on experience in building responsive, user-friendly web applications, I love turning ideas into impactful digital solutions.
+            </p>
+            <ul class="about-info mt-4 px-md-0 px-2" style="color: rgb(0, 128, 128);">
+              <li class="d-flex"><span>Name:</span> <span>Manikandan</span></li>
+              <li class="d-flex"><span>Date of birth:</span> <span>September 19, 2002</span></li>
+              <li class="d-flex"><span>Address:</span> <span>Kvs Street Alangudi Pudukkottai</span></li>
+              <li class="d-flex"><span>Pin code:</span> <span>622301</span></li>
+              <li class="d-flex"><span>Email:</span> <span>madhanmani424@gmail.com</span></li>
+              <li class="d-flex"><span>Phone: </span> <span>6383124653</span></li>
+            </ul>
+          </div>
+        </div>
 	         <div class="counter-wrap ftco-animate d-flex mt-md-3">
 		<div class="text">
 			<p class="mb-4">
@@ -747,9 +759,19 @@
 
 <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
   <div class="container">
-    <div class="row no-gutters block-10 ">
-      <div class="col-md-6 order-md-last d-flex">
-        <form action="#" class="bg-light pl-4 p-md-6 contact-form g-4" >
+    <div class="row no-gutters block-10 d-flex align-items-stretch">
+      
+      <div class="col-md-6 d-flex" style="min-height: 500px;">
+        <div class="img w-100" 
+             style="background-image: url('https://images.unsplash.com/photo-1525182008055-f88b95ff7980?auto=format&fit=crop&w=1600&q=80'); 
+                    background-size: cover; 
+                    background-position: center; 
+                    height: 100%;">
+        </div>
+      </div>
+
+      <div class="col-md-6 d-flex">
+        <form action="#" class="bg-light pl-4 p-md-6 contact-form g-4 w-100 d-flex flex-column justify-content-center">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Your Name">
           </div>
@@ -760,7 +782,7 @@
             <input type="text" class="form-control" placeholder="Subject">
           </div>
           <div class="form-group">
-            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+            <textarea cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
           </div>
           <div class="form-group">
             <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5 shadow">
@@ -768,9 +790,6 @@
         </form>
       </div>
 
-      <div class="col-md-4 d-flex">
-        <div class="img" style="background-image: url('https://images.unsplash.com/photo-1525182008055-f88b95ff7980?auto=format&fit=crop&w=1600&q=80'); background-size: cover; background-position: center; width:100%; height:75%"></div>
-      </div>
     </div>
   </div>
 </section>
