--- a/firstpage.html
+++ b/firstpage.html
@@ -104,9 +104,11 @@
     </section>
 
     <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
-    	<div class="container">
-    		<div class="col-md-6 col-lg-6 d-flex d-md-flex">
-        <div class="img-about img d-flex align-items-stretch w-100" style="position: relative; min-height: 800px;">
+  <div class="container">
+    <div class="row d-flex no-gutters">
+      
+      <div class="col-md-6 col-lg-6 d-flex d-md-flex">
+        <div class="img-about img d-flex align-items-stretch w-100" style="position: relative; min-height: 500px;">
           <div class="overlay"></div>
           <div class="img d-flex align-self-stretch align-items-center w-100" 
                style="background-image: url('images/my pic.jpg'); 
@@ -135,23 +137,22 @@
             </ul>
           </div>
         </div>
-	         <div class="counter-wrap ftco-animate d-flex mt-md-3">
-		<div class="text">
-			<p class="mb-4">
-			<span class="number" data-number="20">0</span>
-			<span>Project's complete</span>
-			</p>
-			<p>
-		<!-- Download Resume -->
-			<a href="resume/Manikandan Resume (5).pdf" class="btn btn-primary py-3 px-3" target="_blank">Download CV</a>
-			</p>
-			</div>
-			</div>
 
-	        </div>
+        <div class="counter-wrap ftco-animate d-flex mt-md-3">
+          <div class="text">
+            <p class="mb-4">
+              <span class="number" data-number="20">0</span>
+              <span>Project's complete</span>
+            </p>
+            <p>
+              <a href="resume/Manikandan Resume (5).pdf" class="btn btn-primary py-3 px-3" target="_blank">Download CV</a>
+            </p>
+          </div>
         </div>
-    	</div>
-    </section>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- <section class="ftco-section ftco-partner">
     	<div class="container">
